--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -52,14 +52,12 @@
           margin-bottom: 10px;
         }
         &-imageTitle {
-          text-align: center;
+          text-align: left;
+          font-weight: bold;
           margin-bottom: 5px;
         }
         &-text {
           margin-bottom: 10px;
-          span {
-            font-weight: bold;
-          }
         }
         &-link {
           width: 18%;
