fix(frontend): Rename Category Search to Natural Capital Search and update About Us links
Renamed "Category Search" to "Natural Capital Search". Updated related links on the About Us page based on feedback.Added spacing between partner logos

IssueID NCEA-314

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -26,7 +26,7 @@
     </div>
     <div class="govuk-grid-column-full  govuk-grid-row">
       <h2 class="govuk-heading-m govuk-!-margin-bottom-6">
-        Category search
+        Natural Capital Search
       </h2>
       <p class="govuk-body govuk-!-margin-bottom-6">
         All resources in this service are classified into broad themes and specific categories relevant to taking a natural capital approach. Use the category search to select the natural capital themes and categories of interest to help narrow down your search.
@@ -36,7 +36,7 @@
         <a href="#" target="_blank" class='help-link'>Natural capital classification glossary</a>
       </p> #}
       <p class="govuk-body govuk-!-margin-bottom-6">
-       The Category search is a beta service that is continuing to be improved. Your <a class='govuk-link' href="{{routes.feedbackLink}}" target="_blank">feedback</a> will help us improve it.
+       The Natural Capital Search is a beta service that is continuing to be improved. Your <a class='govuk-link' href="{{routes.feedbackLink}}" target="_blank">feedback</a> will help us improve it.
       </p>
     </div>
     {{ govukButton({
