--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -43,7 +43,7 @@
               Natural capital is the term encompassing all natural assets that form the environment we live in. Natural capital knowledge enables us to improve people’s wellbeing while accelerating economic growth, by placing the benefits of nature to society at the heart of decision-making.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-6">
-              <a class='govuk-link' href="{{routes.homePage}}/about" target="_blank">NCEA</a> is transforming the way we make decisions and develop policy, helping to ensure we invest in environmental reforms that achieve maximum benefit.
+              <a class='govuk-link' href="{{ nceaAboutLink }}" target="_blank">NCEA</a> is transforming the way we make decisions and develop policy, helping to ensure we invest in environmental reforms that achieve maximum benefit.
             </p>
             <p class="govuk-body govuk-!-margin-bottom-6">
               The programme's outputs are supporting the Government’s missions and Defra's priorities to turbocharge nature's recovery, boost food security, make our water cleaner, reduce flooding impact and create a roadmap to zero waste economy.
@@ -129,11 +129,11 @@
            <div class="landingPage__links_container-quicklinks">
            {% for item in quickLinks %}
               <div class="landingPage__links_container-quicklinks-list">
-                    <img width="30px" height="30px" src="{{ item.iconUrl }}" title="{{item.iconName}}">
-                      <a href="{{ item.link }}" target="_blank" rel="noreferrer noopener" class="govuk-link govuk-link--no-underline">{{item.iconName}}</a>
-                </div>
-            {% endfor %}
+                  <img width="30px" height="30px" src="{{ item.iconUrl }}" title="{{item.iconName}}">
+                  <a href="{{ item.link }}" target="_blank" rel="noreferrer noopener" class="govuk-link govuk-link--no-underline">{{item.iconName}}</a>
               </div>
+            {% endfor %}
+            </div>
         </div>
      </div>
     <section>
