fix(frontend): Rename Category Search to Natural Capital Search
Renamed "Category Search" to "Natural Capital Search".

IssueID NCEA-314

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -29,7 +29,7 @@
         Natural Capital Search
       </h2>
       <p class="govuk-body govuk-!-margin-bottom-6">
-        All resources in this service are classified into broad themes and specific categories relevant to taking a natural capital approach. Use the category search to select the natural capital themes and categories of interest to help narrow down your search.
+        All resources in this service are classified into broad themes and specific categories relevant to taking a natural capital approach. Use the natural capital search to select the natural capital themes and categories of interest to help narrow down your search.
       </p>
       {# disabling it enable once glossary link is available #}
       {# <p class="govuk-body govuk-!-margin-bottom-6">
