fix(MoreInfoPage): Remove unavailable date text when start or end date is missing in Study Period
Removed the "unavailable" text display in cases where either the start date or end date is not provided in Study Period.

IssueID NCEA-317

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -112,22 +112,14 @@
               <span class='start'>
                 {% if item.studyPeriodStart %}
                   {{ item.studyPeriodStart }}
-                {% else %}
-                  {{govukTag({
-                    text: "Unavailable",
-                    classes: "govuk-tag--grey tab-content-value__not-provided"
-                  })}}
                 {% endif %}
               </span>
-              <span>to</span>
+             {% if item.studyPeriodEnd %}
+               <span>to</span>
+             {% endif %}
               <span class='end'>
                 {% if item.studyPeriodEnd %}
                   {{ item.studyPeriodEnd }}
-                {% else %}
-                  {{govukTag({
-                    text: "Unavailable",
-                    classes: "govuk-tag--grey tab-content-value__not-provided"
-                  })}}
                 {% endif %}
               </span>
             </span>
