--- a/src/views/partials/results/map_results.njk
+++ b/src/views/partials/results/map_results.njk
@@ -13,8 +13,7 @@
         <div class="container">
           <div class="heading">
             <span class="title">
-              <h2 class="govuk-heading-m filter-heading govuk-!-margin-0" id="cluster-list-heading"></h2>
-              <button id="cluster-list-close" class="close">
+              <button id="cluster-list-close" class="close" aria-label="close">
                 {{icon("cross", {
                   width: "1.5rem",
                   height: "1.5rem"
