--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -13,6 +13,7 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
+  <meta name="description" content="Tabbed page of information specific to a single search result.">
 {% endblock %}
 
 {% block beforeContent %}
