--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -5,6 +5,7 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
+  <meta name="description" content="Paginated list of search results with filters to further narrow results.">
   {% endblock %}
   {% block beforeContent %}
     {{ super() }}
