--- a/src/views/screens/feeds/template.njk
+++ b/src/views/screens/feeds/template.njk
@@ -1,4 +1,8 @@
 {% extends "layout/default.njk" %}
+{% block head %}
+  {{ super() }}
+    <meta name="description" content="Latest updates and blogs/news on NCEA project.">
+{% endblock %}
 {% block content %}
   <h1 class="govuk-heading-l">Latest news</h1>
   {% if error %}
