fix(frontend): Improve accessibility, SEO and performance across NCEA pages
Added the width and height for "A peatland landscape" image in about page

IssueID NCEA-321

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -20,7 +20,7 @@
     <h2 class="govuk-heading-m">Featured articles</h2>
     <div class="landingPage__articles-container">
       <div class="landingPage__articles-container--article">
-        <img src={{ introText.imageUrl1 }} width="800" height="533" loading="lazy" alt="A street lined with parked cars and blooming cherry blossom trees on both sides during springtime" title="Trees Outside Woodland" />
+        <img src={{ introText.imageUrl1 }} width="800" height="533" alt="A street lined with parked cars and blooming cherry blossom trees on both sides during springtime" title="Trees Outside Woodland" />
         <span class="govuk-body landingPage__articles-container--article-imageTitle">Trees Outside Woodland</span>
         <p class="landingPage__articles-container--article-text govuk-body">
           England’s trees outside woodlands have been mapped by satellite and laser are freely available for first time revealing they make up 30% of nation’s tree cover.
@@ -28,7 +28,7 @@
          <a href="{{introText.image1Url}}" target="_blank" rel="noreferrer noopener" class="govuk-link govuk-link--no-underline landingPage__articles-container--article-link">More &gt;&gt;</a>
       </div>
       <div class="landingPage__articles-container--article">
-        <img src={{ introText.imageUrl2 }} alt="A peatland landscape in England with water channels and grassy vegetation" title="England Peat Map" />
+        <img src={{ introText.imageUrl2 }} width="800" height="533" alt="A peatland landscape in England with water channels and grassy vegetation" title="England Peat Map" />
         <span class="govuk-body govuk-body landingPage__articles-container--article-imageTitle">England Peat Map</span>
         <p class="landingPage__articles-container--article-text govuk-body">
           The new nationwide map of peat and peaty soils, England Peat Map, shows the most detailed national coverage to date for peat depth, peatland vegetation, upland drainage channels, and bare peat.
