feat(moreinfo): Check resource access before downloading file
Implemented a function to fetch the resource URL and check the response
status. If the response is 200, trigger the file download under the Full downloads and supporting documentation section. If the resource is not OK eg, 401 or 404, will redirect to the DSP application

IssueID NCEA-35

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -39,6 +39,7 @@
   <script>
     var gtmIdValue = "{{ gtmId }}";
     var keyboardFiltersBaseUrlValue = "{{keyboardFiltersBaseUrl}}"
+    var isLocal = "{{ isLocal }}"
   </script>
   <script type="module" src="{{ assetPath }}/scripts/cookieScript.js"></script>
   <header class="header-container">
