fix(pages): Update Future Releases text
At the clients behest we have been asked to update the text used
for the Future Release section of the About page.

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -105,7 +105,7 @@
                 Future Releases
             </h2>
             <p class="govuk-body govuk-!-margin-bottom-6">
-             Over the next year NCEA will release a range of products developed by the programme, including the National Habitat (Opportunity) Network Map, Hedgerow Map, Landscape evaluation statistics and analysis-ready data from the England Ecosystem Survey, Water Monitoring Networks, mycorrhizal diversity data and National Forest Inventory Plus.
+             Over the next year NCEA will release a range of products developed by the programme, including the updates to the National Habitat Network Maps, Hedgerow Map, Landscape evaluation statistics and analysis-ready data from the England Ecosystem Survey, Water Monitoring Networks, mycorrhizal diversity data and National Forest Inventory Plus.
             </p>
         </div>
     </section>
