fix(pages): Update meta description text
I've updated the meta tag `description` field for all pages, these
tags are used by browser, search engines etc.

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -2,10 +2,11 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% extends "layout/default.njk" %}
+
 {% block head %}
   {{ super() }}
 
-    <meta name="description" content="Describe NCEA application and links to partner sites as well as other relevant links.">
+    <meta name="description" content="Natural Capital and Ecosystem Assessment programme (NCEA) background, highlights and product brochure">
 {% endblock %}
 
 {% block content %}
