--- a/src/views/screens/feeds/template.njk
+++ b/src/views/screens/feeds/template.njk
@@ -1,8 +1,10 @@
 {% extends "layout/default.njk" %}
+
 {% block head %}
   {{ super() }}
-    <meta name="description" content="Latest updates and blogs/news on NCEA project.">
+    <meta name="description" content="Latest news from the Natural Capital and Ecosystem Assessment programme (NCEA) from Defra and Natural England">
 {% endblock %}
+
 {% block content %}
   <h1 class="govuk-heading-l">Latest news</h1>
   {% if error %}
