--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -27,10 +27,12 @@
   }) }}
   {% endif %}
 {% endblock %}
+
 {% block head %}
   {{ super() }}
-    <meta name="description" content="A page to guide users searching for information when not familiar or confident in providing specific search terms.">
+    <meta name="description" content="Innovative search for environmental data through Natural Capital themes and vocabulary">
 {% endblock %}
+
 {% block content %}
   {% if  nextLevel > 2 %}
     {% include "partials/results_count/template.njk" %}
