--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -1,10 +1,12 @@
 {% extends "layout/default.njk" %}
 {% from "partials/quick_search/macro.njk" import quickSearch %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
+
 {% block head %}
   {{ super() }}
-    <meta name="description" content="Landing page for the NCEA app, allowing users to do a quick search or a more guided category search.">
+    <meta name="description" content="Innovative Natural Capital focused search for data and outputs from the NCEA programme and Defra group">
 {% endblock %}
+
 {% block content %}
   <header class="full-width-banner" role="banner">
     <div class="banner-container">
