fix(pages): Update meta description for search results page
The meta description tag for this page is in 2 places, which I don't
like. That being said, we just want this fixed for now, so I've updated
the other place it is used.

--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -13,7 +13,7 @@
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="{{ assetPath }}/css/ol.css">
-  <meta name="description" content="Tabbed page of information specific to a single search result.">
+  <meta name="description" content="Natural Capital search results with options to filter results further and view on a map">
 {% endblock %}
 
 {% block beforeContent %}
