fix(search): Fix typo in NCEA contribution text in search results
Corrected a spelling error in the NCEA contribution text shown
in the search result section

IssueID NCEA-341

--- a/src/views/macros/ncea-contribution.njk
+++ b/src/views/macros/ncea-contribution.njk
@@ -5,15 +5,15 @@
     <img width="100px" height="auto" src="{{ assetPath }}/images/NCEA_logo.png" title="NCEA logo" />
       {% if contribution === 'supported' %}
         <p class='search-result__content'>
-          This work was supported in part by Defra through the National Capital Ecosystem
+          This work was supported in part by Defra through the Natural Capital and Ecosystem
           Assessment programme (NCEA).
         </p>
       {% elseif contribution === 'funded' %}
         <p class='search-result__content'>
-          This work was funded by Defra through the National Capital Ecosystem
+          This work was funded by Defra through the Natural Capital and Ecosystem
           Assessment programme (NCEA).
         </p>
       {% endif %}
-    
+
     </div>
 {% endmacro %}
