feat(pages): Implemented Landing and About Us data category section
I added 6-category responsive card grid.
Each card displays: Image, Category Name and Category Summary.

IssueID NCEA-399 & NCEA-400

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -80,6 +80,7 @@
         </div>
       </section>
     {% endif %}
+    {% include "partials/home_data_categories/template.njk" %}
     <section class="landingPage__partnersLogo">
       <div class="landingPage__partnersLogo-leftsection">
         <h2 class="govuk-heading-m">Product Brochure</h2>
