--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -55,6 +55,7 @@
       'data-do-quick-search': false
     }
   }) }}
+    {% include "partials/home_data_categories/template.njk" %}
     <article class="govuk-grid-row" role="article">
       <div class="govuk-grid-column-full educational-copy-container">
         <h1 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">Data types and scope</h1>
