--- a/src/assets/sass/templates/_home.scss
+++ b/src/assets/sass/templates/_home.scss
@@ -29,7 +29,7 @@
   }
 }
 
-.privacy_policy_last_updated{
+.privacy_policy_last_updated {
   color: govuk-colour("dark-grey");
   font-weight: 300;
   line-height: 30px;
@@ -67,6 +67,7 @@
     @include font-style-stack(48px, 50px, 700);
     color: $govuk-text-colour;
   }
+
   &__heading-s {
     @include font-style-stack(24px, 30px, 700);
     color: $govuk-text-colour;
@@ -109,5 +110,53 @@
       vertical-align: top;
       padding: 10px 20px 10px 0;
     }
+  }
+}
+
+.data-categories {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 24px;
+  margin-left: 0;
+  margin-right: 0;
+
+  >.govuk-grid-column-full {
+    grid-column: 1 / -1;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    float: none;
+  }
+
+  >.govuk-grid-column-one-third {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    float: none;
+  }
+
+  @include govuk-media-query($from: tablet, $until: desktop) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @include govuk-media-query($until: tablet) {
+    grid-template-columns: 1fr;
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  &__link {
+    display: inline-block;
   }
 }
